# mysocial

./: pyproject.toml
mysocial/: manage.py
mysocial/core/: urls.py  views.py
mysocial/core/templates/core/: terms.html
mysocial/mysocial/: asgi.py  settings.py  urls.py  wsgi.py
mysocial/posts/: models.py
mysocial/posts/migrations/: 0001_initial.py
mysocial/users/: models.py
mysocial/users/migrations/: 0001_initial.py
mysocial_api/: manage.py
mysocial_api/mysocial_api/: asgi.py  settings.py  urls.py  wsgi.py
mysocial_api/posts/: models.py  serializers.py  urls.py  views.py
mysocial_api/posts/migrations/: 0001_initial.py  0002_comment.py  0003_like.py  0004_reaction_delete_like.py
mysocial_api/users/: models.py  serializers.py  urls.py  views.py
mysocial_api/users/migrations/: 0001_initial.py
