[project]
name = "mysocial"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludwig S",email = "silvaludwig@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django",
    "pillow",
    "django-crispy-forms",
    "crispy-bootstrap5",
    "djangorestframework",
    "django-cors-headers",
    "drf-yasg",
    "djangorestframework-simplejwt"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
